syntax = "proto3";

package file_service;

option go_package = ".;file_service";

service FileService {
  rpc UploadFile(stream UploadRequest) returns (UploadResponse) {}
  rpc ListFiles(ListRequest) returns (ListResponse) {}
  rpc DownloadFile(DownloadRequest) returns (stream DownloadResponse) {}
}

message UploadRequest {
  oneof data {
    string filename = 1;
    bytes chunk = 2;
  }
}

message UploadResponse {
  string filename = 1;
  uint32 size = 2;
}

message ListRequest {}

message FileInfo {
  string filename = 1;
  string created_at = 2;
  string updated_at = 3;
}

message ListResponse {
  repeated FileInfo files = 1;
}

message DownloadRequest {
  string filename = 1;
}

message DownloadResponse {
  bytes chunk = 1;
}